# kalshi-weather-bot

./: README.md  demo_portfolio.py  main.py  pyproject.toml  quick_status.py  requirements.txt  run_bot_week.ps1  test_core.py  validate.py  view_results.py  web_dashboard.py
.claude/: settings.local.json
config/: settings.py
data/: metar_client.py  nws_client.py  weather_bot.db
engine/: bracket_tracker.py  portfolio.py  position_manager.py  trading_strategy.py
exchange/: kalshi_client.py
kalshi_weather_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storage/: db.py
